<resources>
    <string name="app_name">Reading</string>
    <string name="reading">Reading</string>
    <string name="cardText">Awesome - we are pulling in your data automagically</string>
    <string name="chip1">Week: 01</string>
    <string name="chip2">Week: 02</string>
    <string name="chip3">Week: 03</string>
    <string name="chip4">Week: 04</string>
    <string name="sessionText">Session List</string>
    <string name="course1">Intro Course</string>
    <string name="videoText">Video 2 min</string>
    <string name="course2">Basic Building Blocks</string>
    <string name="practiseText">Practise 4 min</string>




</resources>